fix: z-index

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -201,6 +201,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 10px 0 0 0;
+  z-index: -1;
 }
 
 .total {
